[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/world/SnapCamera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 466, 440 )

[node name="SnapCamera" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CameraPosition" type="Position2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 25 )

[connection signal="body_entered" from="." to="." method="_on_SnapCamera_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SnapCamera_body_exited"]
